--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="titulo-principal">Top Gun-Maverick: O filme de açao mais aclamado</h1>
+        <h1 class="titulo-principal">Top Gun-Maverick: O filme de ação mais aclamado</h1>
 
         <div class="banner">
             <img src="https://m.media-amazon.com/images/I/71lvUYzEe9L.jpg" alt="banner do filme">
+        </div>
+
+        <div class="atores">
+            <div class="ator">
+                <img src="https://br.web.img3.acsta.net/pictures/18/07/25/22/08/5179819.jpg" alt="">
+                <p>Tom Cruise</p>
+            </div>
+            <div class="ator">
+                <img src="https://m.media-amazon.com/images/M/MV5BM2ZiYThiZTUtYmM0ZS00ZWQzLTgzMTEtZWY1ZDkwNWM4ZGNmXkEyXkFqcGdeQXVyMTE1MTYxNDAw._V1_FMjpg_UX1000_.jpg" alt="">
+                <p>Miles Teller</p>
+            </div>
+            <div class="ator">
+                <img src="https://m.media-amazon.com/images/M/MV5BNjUwNzU5ZDktMDAzMy00NjExLWEwMzgtY2MxNjM2MTM0ODczXkEyXkFqcGdeQXVyMTI2Nzk2ODk3._V1_.jpg" alt="">
+                <p>Monica Barbaro</p>
+            </div>
         </div>
     </div>
 </body>
